# poetrydemo

./: README.md  pyproject.toml
.github/workflows/: output.yml  pylint.yml  python-app.yml
myproject/: addition.py
tests/: test_addition.py
