[tool.poetry]
name = "myproject"
version = "0.1.0"
description = ""
authors = ["Chandra Shekhar <cshekhar@nvidia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.2"
pytest = "^7.3.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
